--- a/thesis.tex
+++ b/thesis.tex
@@ -98,8 +98,8 @@
 \renewcommand{\authorZhName}{吳柏瑜}  %作者中文姓名
 \renewcommand{\authorEnName}{Wu Po-Yu}  %作者英文姓名
 \renewcommand{\authorStudentID}{R04921034}  %作者學號
-\renewcommand{\advisorZhName}{李宏毅}  %指導教授中文姓名
-\renewcommand{\advisorEnName}{Hung-yi Lee}  %指導教授英文姓名
+\renewcommand{\advisorZhName}{李宏毅 教授}  %指導教授中文姓名
+\renewcommand{\advisorEnName}{Hung-yi Lee, Ph.D}  %指導教授英文姓名
 \renewcommand{\zhCollegeName}{電機資訊學院}  %學院中文名稱
 \renewcommand{\enCollegeName}{College of Electrical Engineering and Computer Science}  %學院英文名稱
 \renewcommand{\zhDepartmentName}{電機工程學研究所}  %系所中文名稱
