--- a/thesis_bib.bib
+++ b/thesis_bib.bib
@@ -1,5 +1,48 @@
 % This file was created with JabRef 2.10.
 % Encoding: MS950
+@article{weston2015towards,
+  title={Towards ai-complete question answering: A set of prerequisite toy tasks},
+  author={Weston, Jason and Bordes, Antoine and Chopra, Sumit and Rush, Alexander M and van Merri{\"e}nboer, Bart and Joulin, Armand and Mikolov, Tomas},
+  journal={arXiv preprint arXiv:1502.05698},
+  year={2015}
+}
+@inproceedings{deng2009imagenet,
+  title={Imagenet: A large-scale hierarchical image database},
+  author={Deng, Jia and Dong, Wei and Socher, Richard and Li, Li-Jia and Li, Kai and Fei-Fei, Li},
+  booktitle={Computer Vision and Pattern Recognition, 2009. CVPR 2009. IEEE Conference on},
+  pages={248--255},
+  year={2009},
+  organization={IEEE}
+}
+@article{rajpurkar2016squad,
+  title={Squad: 100,000+ questions for machine comprehension of text},
+  author={Rajpurkar, Pranav and Zhang, Jian and Lopyrev, Konstantin and Liang, Percy},
+  journal={arXiv preprint arXiv:1606.05250},
+  year={2016}
+}
+@inproceedings{hermann2015teaching,
+  title={Teaching machines to read and comprehend},
+  author={Hermann, Karl Moritz and Kocisky, Tomas and Grefenstette, Edward and Espeholt, Lasse and Kay, Will and Suleyman, Mustafa and Blunsom, Phil},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={1693--1701},
+  year={2015}
+}
+@inproceedings{yang2015wikiqa,
+  title={WikiQA: A Challenge Dataset for Open-Domain Question Answering.},
+  author={Yang, Yi and Yih, Wen-tau and Meek, Christopher},
+  booktitle={EMNLP},
+  pages={2013--2018},
+  year={2015},
+  organization={Citeseer}
+}
+@inproceedings{richardson2013mctest,
+  title={MCTest: A Challenge Dataset for the Open-Domain Machine Comprehension of Text.},
+  author={Richardson, Matthew and Burges, Christopher JC and Renshaw, Erin},
+  booktitle={EMNLP},
+  volume={3},
+  pages={4},
+  year={2013}
+}
 @misc{tensorflow2015-whitepaper,
 title={ {TensorFlow}: Large-Scale Machine Learning on Heterogeneous Systems},
 url={http://tensorflow.org/},
