chap3 temporally done

--- a/thesis_bib.bib
+++ b/thesis_bib.bib
@@ -1,5 +1,45 @@
 % This file was created with JabRef 2.10.
 % Encoding: MS950
+@inproceedings{xu2015show,
+  title={Show, attend and tell: Neural image caption generation with visual attention},
+  author={Xu, Kelvin and Ba, Jimmy and Kiros, Ryan and Cho, Kyunghyun and Courville, Aaron and Salakhudinov, Ruslan and Zemel, Rich and Bengio, Yoshua},
+  booktitle={International Conference on Machine Learning},
+  pages={2048--2057},
+  year={2015}
+}
+@article{bahdanau2014neural,
+  title={Neural machine translation by jointly learning to align and translate},
+  author={Bahdanau, Dzmitry and Cho, Kyunghyun and Bengio, Yoshua},
+  journal={arXiv preprint arXiv:1409.0473},
+  year={2014}
+}
+@inproceedings{mnih2014recurrent,
+  title={Recurrent models of visual attention},
+  author={Mnih, Volodymyr and Heess, Nicolas and Graves, Alex and others},
+  booktitle={Advances in neural information processing systems},
+  pages={2204--2212},
+  year={2014}
+}
+@article{weston2014memory,
+  title={Memory networks},
+  author={Weston, Jason and Chopra, Sumit and Bordes, Antoine},
+  journal={arXiv preprint arXiv:1410.3916},
+  year={2014}
+}
+@article{xiong2016dynamic,
+  title={Dynamic memory networks for visual and textual question answering},
+  author={Xiong, Caiming and Merity, Stephen and Socher, Richard},
+  journal={arXiv},
+  volume={1603},
+  year={2016}
+}
+@inproceedings{sukhbaatar2015end,
+  title={End-to-end memory networks},
+  author={Sukhbaatar, Sainbayar and Weston, Jason and Fergus, Rob and others},
+  booktitle={Advances in neural information processing systems},
+  pages={2440--2448},
+  year={2015}
+}
 @article{weston2015towards,
   title={Towards ai-complete question answering: A set of prerequisite toy tasks},
   author={Weston, Jason and Bordes, Antoine and Chopra, Sumit and Rush, Alexander M and van Merri{\"e}nboer, Bart and Joulin, Armand and Mikolov, Tomas},
