add chap 3 table

--- a/thesis_bib.bib
+++ b/thesis_bib.bib
@@ -1,5 +1,13 @@
 % This file was created with JabRef 2.10.
 % Encoding: MS950
+@inproceedings{lin2004rouge,
+  title={Rouge: A package for automatic evaluation of summaries},
+  author={Lin, Chin-Yew},
+  booktitle={Text summarization branches out: Proceedings of the ACL-04 workshop},
+  volume={8},
+  year={2004},
+  organization={Barcelona, Spain}
+}
 @inproceedings{xu2015show,
   title={Show, attend and tell: Neural image caption generation with visual attention},
   author={Xu, Kelvin and Ba, Jimmy and Kiros, Ryan and Cho, Kyunghyun and Courville, Aaron and Salakhudinov, Ruslan and Zemel, Rich and Bengio, Yoshua},
