--- a/thesis.tex
+++ b/thesis.tex
@@ -93,8 +93,8 @@
 
 
 % Title Page
-\renewcommand{\enTitle}{Question Answering System on Attention Memory Network}  %英文標題
-\renewcommand{\zhTitle}{基於專注式記憶模型之問答系統}  %中文標題
+\renewcommand{\enTitle}{Question Answering expressed answer in short text based on Sequence to Sequence Network}  %英文標題
+\renewcommand{\zhTitle}{基於序列對序列網路之問答系統以簡短文字表達}  %中文標題
 \renewcommand{\authorZhName}{吳柏瑜}  %作者中文姓名
 \renewcommand{\authorEnName}{Wu Po-Yu}  %作者英文姓名
 \renewcommand{\authorStudentID}{R04921034}  %作者學號
