--- a/thesis_bib.bib
+++ b/thesis_bib.bib
@@ -1,5 +1,38 @@
 % This file was created with JabRef 2.10.
 % Encoding: MS950
+@article{weissenborn2017making,
+  title={Making Neural QA as Simple as Possible but not Simpler},
+  author={Weissenborn, Dirk and Wiese, Georg and Seiffe, Laura},
+  journal={CoNLL 2017},
+  pages={271},
+  year={2017}
+}
+@article{shen2016reasonet,
+  title={Reasonet: Learning to stop reading in machine comprehension},
+  author={Shen, Yelong and Huang, Po-Sen and Gao, Jianfeng and Chen, Weizhu},
+  journal={arXiv preprint arXiv:1609.05284},
+  year={2016}
+}
+@inproceedings{sharif2014cnn,
+  title={CNN features off-the-shelf: an astounding baseline for recognition},
+  author={Sharif Razavian, Ali and Azizpour, Hossein and Sullivan, Josephine and Carlsson, Stefan},
+  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition Workshops},
+  pages={806--813},
+  year={2014}
+}
+
+@article{nguyen2016plug,
+  title={Plug \& play generative networks: Conditional iterative generation of images in latent space},
+  author={Nguyen, Anh and Yosinski, Jason and Bengio, Yoshua and Dosovitskiy, Alexey and Clune, Jeff},
+  journal={arXiv preprint arXiv:1612.00005},
+  year={2016}
+}
+@article{bowman2015generating,
+  title={Generating sentences from a continuous space},
+  author={Bowman, Samuel R and Vilnis, Luke and Vinyals, Oriol and Dai, Andrew M and Jozefowicz, Rafal and Bengio, Samy},
+  journal={arXiv preprint arXiv:1511.06349},
+  year={2015}
+}
 @inproceedings{lin2004rouge,
   title={Rouge: A package for automatic evaluation of summaries},
   author={Lin, Chin-Yew},
