first defense version

--- a/thesis_frontpages.tex
+++ b/thesis_frontpages.tex
@@ -12,7 +12,9 @@
 \end{acknowledgement}
 
 \begin{zhAbstract}  %中文摘要
-    To Be Continued
+    隨著科技的發展以及巨量的資料，讓我們以前從未想過的科技得以實踐。語音助理的出現，讓人們明顯感受到科技的演進，以及語音辨識之進步，讓使用者更加喜愛和語音助理之互動，因此越發希望語音助理能夠理解出意思，而不是僅僅將語音輸入結果轉接成搜尋結果。本論文之主軸即為問答系統之簡短回答，省去使用者查詢檢索之時間，能夠直接給予使用者所想要的資訊結果。
+
+    本論文首先以檢索回來的資料為出發點，使用深度類神經網路來回答出可能之答案。加入專注式機制，來學習到可能所想要關注的語句。採用回顧機制，試圖反覆理解文章之含義。透過隨插即用及變分遞迴式自動編碼器之概念，來強化語言模型之通順程度以及語義關係。希望能夠透過這些方法，來改善語音助理大多只是回傳搜尋結果的缺失，進而提升使用者的體驗。
 \end{zhAbstract}
 
 {
