--- a/thesis_bib.bib
+++ b/thesis_bib.bib
@@ -1,5 +1,11 @@
 % This file was created with JabRef 2.10.
 % Encoding: MS950
+@article{wang2016machine,
+  title={Machine comprehension using match-lstm and answer pointer},
+  author={Wang, Shuohang and Jiang, Jing},
+  journal={arXiv preprint arXiv:1608.07905},
+  year={2016}
+}
 @article{weissenborn2017making,
   title={Making Neural QA as Simple as Possible but not Simpler},
   author={Weissenborn, Dirk and Wiese, Georg and Seiffe, Laura},
