--- a/thesis_frontpages.tex
+++ b/thesis_frontpages.tex
@@ -8,7 +8,23 @@
 
 \mydoublespacing
 \begin{acknowledgement} %誌謝
-    To Be Continued
+兩年多的時光，一轉眼就過去了。
+
+   兩年前抱持著對機器學習這塊領域有憧憬而選擇了李宏毅老師。感謝老師當初只有一面之緣便收了我做研究生。老師在百忙之中仍抽出時間跟我討論研究，每次進度緩慢時都感到十分愧疚，對我的研究提出許多獨到的見解，提出一些改善的意見，也謝謝老師這兩年來總是包容我一些要求，放手讓我嘗試很多事情。
+
+   感謝李琳山教授，雖然老師並不是我的指導教授，仍然會照顧我，對我指點一二。在每週的咪聽時，總能從老師身上學習到一些知識。進來後聽過學長姐講過，覺得在老師研究室下做研究是最自由的，讓我們每個人都能隨心所欲的做自己想做的事，專心地投入在研究之中。
+
+   感謝 Youtuber 的 howhow ，讓我在苦悶、孤獨的研究之中，不時的提供一些引人發噱的影片，替我苦悶的研究生活，添了一點色彩。
+
+   感謝廖宜修學長，總是能在我學習的路上給我許多的幫助，指導了我 Paper Report 以及 Paper Introduction 上的一些技巧，當我在報告不好時給予我一些指教。感謝吳彥諶學長，總是能和我討論一些時事、社會議題，促進我的思辨。感謝沈昇勳學長，不時的笑話、嘴砲，以及對研究上的一些看法，你們三個人總是會在 531 實驗室待到很晚，讓我感受到研究路上的不孤單，感謝呂相弘學長，總是帶領著我們玩樂、討論研究。
+
+   感謝敖家維、沈家豪、王育軒、陳永哲、林資偉、林賢進、陳仰德、劉家翔、余朗祺，一起做研究、修課的日子，感謝大家能不時的接受我的吐槽以及冷笑話，一些玩笑話希望你們不要太過介意。感謝學弟妹們，處理了許多實驗室上的事情，祝你們未來一年研究一切順利。
+   
+   感謝家人，包容我的聚少離多，回家時又能完全的放鬆，給予我支柱。
+
+   感謝大學同學，一起玩樂，一起吃飯，一起運動，一同討論研究生活的苦悶。
+
+   感謝我自己，也期許未來的我能夠更加努力。
 \end{acknowledgement}
 
 \begin{zhAbstract}  %中文摘要
