fix English defense date

--- a/thesis.tex
+++ b/thesis.tex
@@ -93,7 +93,7 @@
 
 
 % Title Page
-\renewcommand{\enTitle}{End-to-end Short Text Question Answering based on Sequence-to-Sequence Network}  %英文標題
+\renewcommand{\enTitle}{End-to-End Short Text Question Answering based on Sequence-to-Sequence Network}  %英文標題
 \renewcommand{\zhTitle}{以序列對序列網路為基礎的端對端短句回覆問答系統}  %中文標題
 \renewcommand{\authorZhName}{吳柏瑜}  %作者中文姓名
 \renewcommand{\authorEnName}{Wu Po-Yu}  %作者英文姓名
@@ -105,10 +105,10 @@
 \renewcommand{\zhDepartmentName}{電機工程學研究所}  %系所中文名稱
 \renewcommand{\enDepartmentName}{Graduate Institute of Electrical Engineering}  %系所英文名稱
 \renewcommand{\rocYear}{一百零六}  %中華民國紀年年份
-\renewcommand{\zhMonth}{六}  %中文月份
+\renewcommand{\zhMonth}{九}  %中文月份
 \renewcommand{\enYear}{2017}  %公元紀年
-\renewcommand{\enMonth}{June}  %英文月份
-\renewcommand{\oralDate}{103 年 6 月 23 日}  %口試日期
+\renewcommand{\enMonth}{September}  %英文月份
+\renewcommand{\oralDate}{106 年 9 月 15 日}  %口試日期
 
 %
 % listing setting
